--- a/environment.yml
+++ b/environment.yml
@@ -24,5 +24,5 @@ dependencies:
         - cached_property
         - pyprind
         - git+https://github.com/neocxi/Lasagne.git@484866cf8b38d878e92d521be445968531646bb8#egg=Lasagne
-        - git+https://github.com/rll/rllab.git
+        - git+https://github.com/dwicke/rllab.git
         - cloudpickle
