start to tweak config files

--- a/environment.yml
+++ b/environment.yml
@@ -23,6 +23,7 @@ dependencies:
         - git+https://github.com/Theano/Theano.git@adfe319ce6b781083d8dc3200fb4481b00853791#egg=Theano
         - cached_property
         - pyprind
+        - boto3
         - git+https://github.com/neocxi/Lasagne.git@484866cf8b38d878e92d521be445968531646bb8#egg=Lasagne
         - git+https://github.com/dwicke/rllab.git
         - cloudpickle
