--- a/environment.yml
+++ b/environment.yml
@@ -19,6 +19,7 @@ dependencies:
         - torchvision
         - numpy==1.13.1
         - gym==0.9.3
+        - mujoco-py==0.5.7
         - matplotlib==2.0.2
         - git+https://github.com/Theano/Theano.git@adfe319ce6b781083d8dc3200fb4481b00853791#egg=Theano
         - cached_property
